<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Status Bar Tachometer</string>
    <string name="current_speed">Current Speed</string>
    <string name="unknown">unknown</string>
    <string name="unit_kmh">km/h</string>
    <string name="unit_mph">mi/h</string>
    <string name="unit_ms">m/s</string>
    <string name="unit_fts">ft/s</string>
    <string name="toggle_off">Tachometer disabled</string>
    <string name="toggle_on">Tachometer enabled</string>
    <string name="shortcut_on">Enable tachometer</string>
    <string name="shortcut_off">Disable tachometer</string>
    <string name="shortcut_toggle">Toggle tachometer</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="about_text">Status Bar Tachometer displays your current speed, based on GPS readings, as a notification in your status bar.\n\nIt features different units of measurement and the option to place shortcuts to start, stop, or toggle the notifications from the home screen.\n\nThe app is completely free and open-source. It is developed by Roland Meyer (rmy.ch).</string>
    <string name="github">View on Github</string>
    <string name="contact">Contact developer</string>

</resources>
